syntax = "proto3";

option go_package = ".;proto";

package proto;

service AuditService {
  rpc RecordEvent(RecordEventRequest) returns (RecordEventResponse) {}
}

message RecordEventRequest {
  uint64 user_id = 1;
  string action = 2;
  bytes metadata = 3;
  string ip = 4;
  string user_agent = 5;
}

message RecordEventResponse {
  bool is_success = 1;
}
